--- a/static/error.html
+++ b/static/error.html
@@ -24,7 +24,7 @@
       <br>send this shit to the webmaster:
       <p>
       <br>{{error}}<br>
-      <br>{{url}}<br>
+      <br><a>{{url}}</a><br>
       <br>{{conf}}
       </p>
     </div>
