--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,50 @@
 
 <html lang="en">
   <head>
+    <meta name="description" content="{{title}}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="icon" href="{{icon}}" type="image/any-icon">
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        -webkit-user-select: none;
+           -moz-user-select: none;
+            -ms-user-select: none;
+                user-select: none;
+      }
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      .wrapper {
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        -webkit-transform: translate(50%, -50%);
+                transform: translate(50%, -50%);
+      }
+      ul {
+        margin-top: 5px;
+        list-style: none;
+        white-space: nowrap;
+      }
+      li {
+        display: inline-block;
+        margin-right: 3px;
+      }
+      a {
+        -webkit-transition: ease-in-out 0.3s;
+        transition: ease-in-out 0.3s;
+        text-decoration: none;
+      }
+      u {
+          text-decoration: underline;
+          text-decoration-style: dashed;
+      }
       body {
+        font-family: 'Inconsolata', monospace;
         background: {{color_bg}};
         color: {{color_fg}};
       }
@@ -27,11 +64,15 @@
       .wrapper p {
         color: {{color_info}};
       }
+      sup {
+        color: {{color_url}};
+        font-size: 12pt;
+      }
     </style>
   </head>
   <body>
     <div class="wrapper">
-      <h1>{{name}}</h1>
+      <h1>{{name}}<sup>{{age}}</sup></h1>
       <br>{{pronouns}}
       <p>
       <br>
