tf did it do to the html

--- a/static/index.html
+++ b/static/index.html
@@ -1,156 +1,89 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <meta content="{{title}}" name="description">
+  <head>
+    <meta name="description" content="{{title}}">
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link href="{{icon}}" rel="icon" type="image/any-icon">
+    <link rel="icon" href="{{icon}}" type="image/any-icon">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            -webkit-user-select: none;
-            -moz-user-select: none;
+      * {
+        margin: 0;
+        padding: 0;
+        -webkit-user-select: none;
+           -moz-user-select: none;
             -ms-user-select: none;
-            user-select: none;
-        }
-
-        ::-webkit-scrollbar {
-            display: none;
-        }
-
-        .wrapper {
-            position: absolute;
-            top: 50%;
-            right: 50%;
-            -webkit-transform: translate(50%, -50%);
-            transform: translate(50%, -50%);
-        }
-
-        ul {
-            margin-top: 5px;
-            list-style: none;
-            white-space: nowrap;
-        }
-
-        li {
-            display: inline-block;
-            margin-right: 3px;
-        }
-
-        a {
-            -webkit-transition: ease-in-out 0.3s;
-            transition: ease-in-out 0.3s;
-            text-decoration: none;
-        }
-
-        u {
-            text-decoration: underline;
-            text-decoration-style: dashed;
-        }
-
-        body {
-            font-family: 'Inconsolata', monospace;
-
-        background: {
-
-        {
-            color_bg
-        }
-        }
-        ;
-        color: {
-
-        {
-            color_fg
-        }
-        }
-        ;
-        }
-        a {
-
-        color: {
-
-        {
-            color_url
-        }
-        }
-        ;
-        }
-        a:visited {
-
-        color: {
-
-        {
-            color_url
-        }
-        }
-        ;
-        }
-        a:hover {
-
-        color: {
-
-        {
-            color_url_hover
-        }
-        }
-        ;
-        }
-        .wrapper h1 {
-
-        color: {
-
-        {
-            color_name
-        }
-        }
-        ;
-        }
-        .wrapper p {
-
-        color: {
-
-        {
-            color_info
-        }
-        }
-        ;
-        }
-        sup {
-
-        color: {
-
-        {
-            color_url
-        }
-        }
-        ;
-        font-size:
-
-        12
-        pt
-
-        ;
-        }
+                user-select: none;
+      }
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      .wrapper {
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        -webkit-transform: translate(50%, -50%);
+                transform: translate(50%, -50%);
+      }
+      ul {
+        margin-top: 5px;
+        list-style: none;
+        white-space: nowrap;
+      }
+      li {
+        display: inline-block;
+        margin-right: 3px;
+      }
+      a {
+        -webkit-transition: ease-in-out 0.3s;
+        transition: ease-in-out 0.3s;
+        text-decoration: none;
+      }
+      u {
+          text-decoration: underline;
+          text-decoration-style: dashed;
+      }
+      body {
+        font-family: 'Inconsolata', monospace;
+        background: {{color_bg}};
+        color: {{color_fg}};
+      }
+      a {
+        color: {{color_url}};
+      }
+      a:visited {
+        color: {{color_url}};
+      }
+      a:hover {
+        color: {{color_url_hover}};
+      }
+      .wrapper h1 {
+        color: {{color_name}};
+      }
+      .wrapper p {
+        color: {{color_info}};
+      }
+      sup {
+        color: {{color_url}};
+        font-size: 12pt;
+      }
     </style>
-</head>
-<body>
-<div class="wrapper">
-    <h1>{{name}}<sup>{{age}}</sup></h1>
-    <br>{{pronouns}}
-    <p>
-        <br>
-        {% for contact in contacts %}
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1>{{name}}<sup>{{age}}</sup></h1>
+      <br>{{pronouns}}
+      <p>
+      <br>
+      {% for contact in contacts %}
         {{contact}}<br>
-        {% endfor %}
-        <br>
-        {% for url in urls %}
+      {% endfor %}
+      <br>
+      {% for url in urls %}
         <a href="{{url}}"><u>{{url}}</u></a><br>
-        {% endfor %}
-    </p>
-</div>
-</body>
+      {% endfor %}
+      </p>
+    </div>
+  </body>
 </html>
